# gdash

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  configure.in  doxygen.conf  doxygen.css  engine_tests.bd  gdash.desktop  gdash.nsi.in  gdk-pixbuf.loaders  replays_example.bd
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
caves/: Makefile.am  Makefile.in  create_makefile.sh
caves/Achim_Hofmann/: Achim_Hofmann.gds
caves/Alan_Bond/: Boulder_Brain.gds
caves/Alex_Zop/: Alex_Zop.gds  Rockirockano01.gds  (+1 more)
docs/: Makefile.am  Makefile.in  brc_format.txt  c64_internals.txt  cave_style.css  cd7_speeds.xls  ckdelay.txt  ckdelay.xls  replay_to_avi.html  style.css
include/: BuiltIn.act  BuiltIn_contrast.act  Jakub_contrast.act  Makefile.am  Makefile.in  Murray.act  No_One_03.gds  No_One_06.gds  Real_contrast.act  Spiff.act  XFormer.act  ataripal.cpp  ataripal.h  background.cpp  c64_font.cpp  c64_font.h  c64_gfx.cpp  c64_gfx.h  c64_png_colors.h  cells2c.c  cells_c64_to_c.c  chargen.h  dtvpal.cpp  dtvpal.h  file2c.cpp  files2c.sh  for_html.cpp  gamebackground.cpp  gdash_icon_32.cpp  gdash_icon_48.cpp  icons.cpp  icons.h  icons.list  levels.cpp  levels.h  palette2c.c  palettetoact.c  process.sh  style.css  title.cpp  (+2 more)
m4/: ChangeLog  ax_check_gl.m4
music/: Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  gdash.pot  hu.gmo  hu.po
shaders/: Curvature.shader  Dot_N_Bloom.shader  GDash-TV.shader  Makefile.am  Makefile.in  templateshader
sound/: Makefile.am  Makefile.in
src/: IMG_savepng.c  Makefile.am  Makefile.in  about.c  about.h  bdcff.c  bdcff.h  c64import.c  c64import.h  cave.c  cave.h  cavedb.c  cavedb.h  caveengine.c  caveengine.h  caveobject.c  caveobject.h  caveset.c  caveset.h  cavesound.c  cavesound.h  colors.c  colors.h  editor-export.c  editor-export.h  editor-widgets.c  editor-widgets.h  editor.c  editor.h  editorbits.c  editorbits.h  editorexport.c  editorexport.h  editorwidgets.c  editorwidgets.h  game.c  game.h  gameplay.c  gameplay.h  gfxutil.c  (+40 more)
src/cave/: cavebase.cpp  cavebase.hpp  caverendered.cpp  caverendered.hpp  caverenderedengine.cpp  caveset.cpp  caveset.hpp  cavestored.cpp  cavestored.hpp  cavetypes.cpp  cavetypes.hpp  colors.cpp  colors.hpp  elementproperties.cpp  elementproperties.hpp  gamecontrol.cpp  gamecontrol.hpp  gamerender.cpp  gamerender.hpp  particle.cpp  particle.hpp  titleanimation.cpp  titleanimation.hpp
src/cave/helper/: adoptingcontainer.hpp  cavehighscore.cpp  cavehighscore.hpp  cavemap.cpp  cavemap.hpp  caverandom.cpp  caverandom.hpp  cavereplay.cpp  cavereplay.hpp  cavesound.cpp  cavesound.hpp  colors.cpp  colors.hpp  namevaluepair.hpp  reflective.hpp
src/cave/object/: caveobject.cpp  caveobject.hpp  caveobjectboundaryfill.cpp  caveobjectboundaryfill.hpp  caveobjectcopypaste.cpp  caveobjectcopypaste.hpp  caveobjectfill.cpp  caveobjectfill.hpp  caveobjectfillrect.cpp  caveobjectfillrect.hpp  caveobjectfloodfill.cpp  caveobjectfloodfill.hpp  caveobjectjoin.cpp  caveobjectjoin.hpp  caveobjectline.cpp  caveobjectline.hpp  caveobjectmaze.cpp  caveobjectmaze.hpp  caveobjectpoint.cpp  caveobjectpoint.hpp  caveobjectrandomfill.cpp  caveobjectrandomfill.hpp  caveobjectraster.cpp  caveobjectraster.hpp  caveobjectrectangle.cpp  caveobjectrectangle.hpp  caveobjectrectangular.cpp  caveobjectrectangular.hpp
src/editor/: editor.cpp  editor.hpp  editorautowidgets.cpp  editorautowidgets.hpp  editorcellrenderer.cpp  editorcellrenderer.hpp  editorwidgets.cpp  editorwidgets.hpp  exportcrli.cpp  exportcrli.hpp  exporthtml.cpp  exporthtml.hpp
src/fileops/: bdcffhelper.cpp  bdcffhelper.hpp  bdcffload.cpp  bdcffload.hpp  bdcffsave.cpp  bdcffsave.hpp  binaryimport.cpp  binaryimport.hpp  brcimport.cpp  brcimport.hpp  c64import.cpp  c64import.hpp  highscore.cpp  highscore.hpp  loadfile.cpp  loadfile.hpp
src/framework/: activity.cpp  activity.hpp  app.cpp  app.hpp  askyesnoactivity.cpp  askyesnoactivity.hpp  commands.cpp  commands.hpp  gameactivity.cpp  gameactivity.hpp  inputtextactivity.cpp  inputtextactivity.hpp  messageactivity.cpp  messageactivity.hpp  replaymenuactivity.cpp  replaymenuactivity.hpp  replaysaveractivity.cpp  replaysaveractivity.hpp  selectfileactivity.cpp  selectfileactivity.hpp  settingsactivity.cpp  settingsactivity.hpp  shadermanager.cpp  shadermanager.hpp  showtextactivity.cpp  showtextactivity.hpp  thememanager.cpp  thememanager.hpp  titlescreenactivity.cpp  titlescreenactivity.hpp  volumeactivity.cpp  volumeactivity.hpp
src/gfx/: cellrenderer.cpp  cellrenderer.hpp  fontmanager.cpp  fontmanager.hpp  pixbuf.cpp  pixbuf.hpp  pixbuffactory.cpp  pixbuffactory.hpp  pixbufmanip.cpp  pixbufmanip.hpp  pixbufmanip_hq2x.cpp  pixbufmanip_hq3x.cpp  pixbufmanip_hq4x.cpp  pixbufmanip_hqx.hpp  pixmap.cpp  pixmap.hpp  pixmapstorage.hpp  screen.cpp  screen.hpp
src/gtk/: gtkapp.cpp  gtkapp.hpp  gtkgameinputhandler.cpp  gtkgameinputhandler.hpp  gtkmainwindow.cpp  gtkmainwindow.hpp  gtkpixbuf.cpp  gtkpixbuf.hpp  gtkpixbuffactory.cpp  gtkpixbuffactory.hpp  gtkpixmap.cpp  gtkpixmap.hpp  gtkscreen.cpp  gtkscreen.hpp  gtkui.cpp  gtkui.hpp  gtkuisettings.cpp  gtkuisettings.hpp  help.cpp  help.hpp
src/input/: gameinputhandler.cpp  gameinputhandler.hpp  joystick.cpp  joystick.hpp
src/misc/: about.cpp  about.hpp  autogfreeptr.hpp  helphtml.cpp  helphtml.hpp  helptext.cpp  helptext.hpp  logger.cpp  logger.hpp  printf.cpp  printf.hpp  smartptr.hpp  util.cpp  util.hpp
src/sdl/: IMG_savepng.c  IMG_savepng.h  gfxprim.cpp  gfxprim.hpp  ogl.cpp  ogl.hpp  sdlabstractscreen.cpp  sdlabstractscreen.hpp  sdlgameinputhandler.cpp  sdlgameinputhandler.hpp  sdlmainwindow.cpp  sdlmainwindow.hpp  sdlparticle.cpp  sdlparticle.hpp  sdlpixbuf.cpp  sdlpixbuf.hpp  sdlpixbuffactory.cpp  sdlpixbuffactory.hpp  sdlpixmap.cpp  sdlpixmap.hpp  sdlscreen.cpp  sdlscreen.hpp
src/sound/: sound.cpp  sound.hpp
util/: Makefile.am  Makefile.in  any2gdash.c  oldbin2gdash.c  palette2c.c
(+1261 files in other folders)
