dnl Process this file with autoconf to produce a configure script.

AC_INIT(GDash, 20080715, cirix@fw.hu)
AC_CONFIG_SRCDIR([src/game.c])
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AM_PROG_CC_C_O

AC_ISC_POSIX
AC_HEADER_STDC

AC_C_CONST
AC_C_INLINE
AC_CHECK_FUNCS([setlocale])

AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION([0.14.4])

AC_PROG_INSTALL

AC_CHECK_HEADERS([stdlib.h unistd.h string.h])
AC_CHECK_FUNCS([strchr strrchr memset strtol])
AC_FUNC_MEMCMP

AM_PATH_GLIB_2_0(2.6.0, :, AC_MSG_ERROR(Test for GLIB failed. See the file 'INSTALL' for help.))

AM_PATH_GTK_2_0(2.12.0, :, AC_MSG_ERROR(Test for GTK+ failed. See the file 'INSTALL' for help.))

AM_PATH_SDL(1.2.0, :, AC_MSG_ERROR(Test for SDL failed. See the file 'INSTALL' for help.))

AC_CONFIG_FILES([
Makefile
po/Makefile.in
include/Makefile
src/Makefile
caves/Makefile
util/Makefile
docs/Makefile
sound/Makefile
])
AC_OUTPUT

