## Process this file with automake to produce Makefile.in
sounddata = \
    amoeba.ogg \
    cover.ogg \
    crack.ogg \
    diamond_1.ogg \
    diamond_2.ogg \
    diamond_3.ogg \
    diamond_4.ogg \
    diamond_5.ogg \
    diamond_6.ogg \
    diamond_7.ogg \
    diamond_8.ogg \
    diamond_collect.ogg \
    door_open.ogg \
    explosion.ogg \
    falling_wall.ogg \
    finished.ogg \
    magic_wall.ogg \
    pneumatic.ogg \
    skeleton_collect.ogg \
    stirring.ogg \
    stone.ogg \
    teleporter.ogg \
    timeout_1.ogg \
    timeout_2.ogg \
    timeout_3.ogg \
    timeout_4.ogg \
    timeout_5.ogg \
    timeout_6.ogg \
    timeout_7.ogg \
    timeout_8.ogg \
    timeout_9.ogg \
    walk_earth.ogg \
    walk_empty.ogg

if SOUND
  pkgdata_DATA = $(sounddata)
endif

EXTRA_DIST = $(sounddata)
