## Process this file with automake to produce Makefile.in
sounddata = \
	acid_spread.ogg \
	amoeba.ogg \
	amoeba_and_magic.ogg \
	bladder_convert.ogg \
	bladder_move.ogg \
	bladder_spender.ogg \
	biter_eat.ogg \
	bomb_collect.ogg \
	bomb_explosion.ogg \
	bomb_place.ogg \
	bonus_life.ogg \
	box_push.ogg \
	clock_collect.ogg \
	cover.ogg \
	crack.ogg \
	diamond_1.ogg \
	diamond_2.ogg \
	diamond_3.ogg \
	diamond_4.ogg \
	diamond_5.ogg \
	diamond_6.ogg \
	diamond_7.ogg \
	diamond_8.ogg \
	diamond_collect.ogg \
	diamond_key_collect.ogg \
	dirt_ball.ogg \
	door_open.ogg \
	expanding_wall.ogg \
	explosion.ogg \
	falling_wall.ogg \
	finished.ogg \
	ghost_explosion.ogg \
	gravity_change.ogg \
	key_collect.ogg \
	lava.ogg \
	nut.ogg \
	nut_crack.ogg \
	replicator.ogg \
	magic_wall.ogg \
	nitro.ogg \
	nitro_explosion.ogg \
	pneumatic_collect.ogg \
	pneumatic.ogg \
	skeleton_collect.ogg \
	slime.ogg \
	stirring.ogg \
	stone.ogg \
	sweet_collect.ogg \
	switch_biter.ogg \
	switch_conveyor.ogg \
	switch_creatures.ogg \
	switch_gravity.ogg \
	switch_expanding.ogg \
	switch_replicator.ogg \
	teleporter.ogg \
	timeout_1.ogg \
	timeout_2.ogg \
	timeout_3.ogg \
	timeout_4.ogg \
	timeout_5.ogg \
	timeout_6.ogg \
	timeout_7.ogg \
	timeout_8.ogg \
	timeout_9.ogg \
	timeout.ogg \
	voodoo_explosion.ogg \
	walk_earth.ogg \
	walk_empty.ogg \
	wall_reappear.ogg \
	water.ogg

if SOUND
  sounddir = $(pkgdatadir)/sound
  sound_DATA = $(sounddata)
endif

EXTRA_DIST = $(sounddata)
